--- a/6-1-1-2_reservation-info.html
+++ b/6-1-1-2_reservation-info.html
@@ -1,15 +1,14 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>newsMainPage</title>
-    <script type="module" crossorigin src="/Luminous-Brunch/assets/main-3b7ee805.js"></script>
-    <link rel="stylesheet" href="/Luminous-Brunch/assets/main-bebc6330.css">
-  </head>
-  <body>
-    <main>
-      <header class="position-relative bg-light">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <script type="module" crossorigin src="/Luminous-Brunch/assets/main-3b7ee805.js"></script>
+  <link rel="stylesheet" href="/Luminous-Brunch/assets/main-bebc6330.css">
+</head>
+<body class="d-lg-flex flex-column vh-100">
+  <header class="position-relative bg-light">
   <div
     class="container-lg d-flex justify-content-between align-items-center py-5"
   >
@@ -93,128 +92,61 @@
   </div>
 </header>
 <div class="navbar_overlay"></div>
-      <div class="bgimage mb-9">
-        <div class="filter"></div>
-        <h3>最新消息/優惠</h3>
-      </div>
-      <div class="news-desktop">
-        <div class="list">
-          <div class="img-wrapper d-flex justify-content-center">
-            <img class="news-pic" src="/Luminous-Brunch/assets/newsPic4-d2ce3fd2.jpg" alt="" />
-            <h3 class="news-content">
-              <a href="3-1_newsContent.html">
-                ＂每日精選美味套餐優惠＂
-                <p class="fs-4 d-flex justify-content-center">
-                  <br /><br />活動期間:2023/10/10-2023/12/15
-                </p>
-              </a>
-            </h3>
-          </div>
-
-          <div style="width: 100%" class="mb-10">
-            <div class="d-flex justify-content-center">
-              <div class="card" style="width: 20%">
-                <img
-                  src="/Luminous-Brunch/assets/newsPic2-dc468fca.jpg"
-                  class="card-img-top card-img"
-                  alt="..."
-                  height="300px"
-                />
-                <div class="card-body card-content">
-                  <h5 class="card-title">刷卡支付享95折優惠</h5>
-                  <p class="card-text">活動期間:2023/10/10-2023/12/31</p>
-                  <a href="3-1_newsContent2.html" class="btn btn-primary"
-                    >了解更多</a
-                  >
-                </div>
-              </div>
-
-              <div class="card" style="width: 20%">
-                <img
-                  src="https://images.unsplash.com/photo-1627309302198-09a50ae1b209?q=80&w=2574&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-                  class="card-img-top card-img"
-                  alt="..."
-                  height="300px"
-                />
-                <div class="card-body card-content">
-                  <h5 class="card-title">外帶早餐經典組合享9折優惠</h5>
-                  <p class="card-text">活動期間:2023/10/10-2024/3/31</p>
-                  <a href="3-1_newsContent3.html" class="btn btn-primary"
-                    >了解更多</a
-                  >
-                </div>
-              </div>
-
-              <div class="card" style="width: 20%">
-                <img
-                  src="/Luminous-Brunch/assets/newsPic3-2eb55dc4.jpg"
-                  class="card-img-top card-img-size"
-                  alt="..."
-                  height="300px"
-                />
-                <div class="card-body card-content">
-                  <h5 class="card-title">歡慶冬季耶誕 特色餐點新上市</h5>
-                  <p class="card-text">活動期間:2023/10/10-2023/12/24</p>
-                  <a href="3-1_newsContent4.html" class="btn btn-primary"
-                    >了解更多</a
-                  >
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="news-mobile">
-        <div class="card">
-          <img
-            src="https://images.unsplash.com/photo-1493770348161-369560ae357d?q=80&w=2670&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-            class="card-img-top"
-            alt="..."
-          />
-          <div class="card-body">
-            <h5 class="card-title">每日精選美味套餐優惠</h5>
-            <p class="card-text">活動期間:2023/10/10-2023/12/15</p>
-            <a href="3-1_newsContent.html" class="btn btn-primary">了解更多</a>
-          </div>
-        </div>
-        <div class="card">
-          <img
-            src="https://images.unsplash.com/photo-1475090169767-40ed8d18f67d?q=80&w=2532&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-            class="card-img-top"
-            alt="..."
-          />
-          <div class="card-body">
-            <h5 class="card-title">刷卡支付享95折優惠</h5>
-            <p class="card-text">活動期間:2023/10/10-2023/12/31</p>
-            <a href="3-1_newsContent2.html" class="btn btn-primary">了解更多</a>
-          </div>
-        </div>
-        <div class="card">
-          <img
-            src="https://images.unsplash.com/photo-1627309302198-09a50ae1b209?q=80&w=2574&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-            class="card-img-top"
-            alt="..."
-          />
-          <div class="card-body">
-            <h5 class="card-title">外帶早餐經典組合享9折優惠</h5>
-            <p class="card-text">活動期間:2023/10/10-2024/3/31</p>
-            <a href="3-1_newsContent3.html" class="btn btn-primary">了解更多</a>
-          </div>
-        </div>
-        <div class="card">
-          <img
-            src="https://images.unsplash.com/photo-1565895405137-3ca0cc5088c8?q=80&w=2671&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-            class="card-img-top"
-            alt="..."
-          />
-          <div class="card-body">
-            <h5 class="card-title">歡慶冬季耶誕 特色餐點新上市</h5>
-            <p class="card-text">活動期間:2023/10/10-2023/12/24</p>
-            <a href="3-1_newsContent4.html" class="btn btn-primary">了解更多</a>
-          </div>
-        </div>
-      </div>
-      <footer class="py-4 border-top bg-pink">
+  <div class="container flex-grow-1 mt-9 mb-9">
+    <h2 class="mb-7 text-center">訂位資訊</h2>
+    <!-- <table class="border border-gray box-shadow-gray-300 row">
+      <thead class="bg-gray text-center">
+        <tr>
+          <th class="px-lg-6 py-lg-4">訂位編號</th>
+          <th class="px-lg-6 py-lg-4">預約日期</th>
+          <th class="px-lg-6 py-lg-4">預約時間</th>
+          <th class="px-lg-6 py-lg-4">用餐人數</th>
+          <th class="px-lg-6 py-lg-4">訂位時間</th>
+          <th class="px-lg-6 py-lg-4">姓名</th>
+          <th class="px-lg-6 py-lg-4">手機號碼</th>
+          <th class="px-lg-6 py-lg-4">信箱</th>
+          <th class="px-lg-6 py-lg-4"></th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr class="text-center">
+          <td class="px-5 py-4">4555</td>
+          <td class="px-5 py-4">2023/10/22</td>
+          <td class="px-5 py-4">上午11:00</td>
+          <td class="px-5 py-4">3位</td>
+          <td class="px-5 py-4">2023/10/21 15:36:01</td>
+          <td class="px-5 py-4">陳曉明</td>
+          <td class="px-5 py-4">0988123456</td>
+          <td class="px-5 py-4">abc@gmail.com</td>
+          <td class="px-5 py-4"><button class="btn btn-dark px-4" type="button">取消訂位</button></td>
+        </tr>
+      </tbody>
+    </table> -->
+    <table class="col-lg-6 border border-gray box-shadow-gray-300 mx-auto">
+      <thead class="bg-gray text-center">
+        <tr>
+          <th class="px-lg-6 py-lg-4">訂位編號</th>
+          <th class="px-lg-6 py-lg-4"></th>
+          <th class="px-lg-6 py-lg-4"></th>
+          
+        </tr>
+      </thead>
+      <tbody>
+        <tr class="text-center">
+          <td class="px-5 py-4 fs-7 fs-md-6">1697873761660</td>
+          <td class="px-1 px-md-5 py-1 py-sm-4"><button class="fs-7 fs-md-6 btn btn-yellow-100" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal">詳細資訊</button></td>
+          <td class="px-1 px-md-5 py-1 py-sm-4"><button class="fs-7 fs-md-6 btn btn-outline-dark" type="button">取消訂位</button></td>
+        </tr>
+        <!--  -->
+        <tr class="text-center">
+          <td class="px-5 py-4 fs-7 fs-md-6">1697873847547</td>
+          <td class="px-1 px-md-5 py-1 py-sm-4"><button class="fs-7 fs-md-6 btn btn-yellow-100" type="button">詳細資訊</button></td>
+          <td class="px-1 px-md-5 py-1 py-sm-4"><button class="fs-7 fs-md-6 btn btn-outline-dark" type="button">取消訂位</button></td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+  <footer class="py-4 border-top bg-pink">
   <div class="container">
     <div class="d-flex justify-content-around footer">
       <div class="d-flex align-items-center">
@@ -278,7 +210,6 @@
     </div>
   </div>
 </footer>
-    </main>
-    
-  </body>
+  
+</body>
 </html>
