--- a/4-1_menu-salad.html
+++ b/4-1_menu-salad.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Salad</title>
-  <script type="module" crossorigin src="/Luminous-Brunch/assets/main-c1cc4f8d.js"></script>
+  <script type="module" crossorigin src="/Luminous-Brunch/assets/main-cab2a921.js"></script>
   <link rel="stylesheet" href="/Luminous-Brunch/assets/main-bebc6330.css">
 </head>
 <body>
@@ -105,22 +105,22 @@
     <div class="py-6">
       <ul id="menuList" class=" d-flex justify-content-around">
         <li>
-          <a id="Salad" href="4-1_menu-salad.html" class="link-primary fs-5 fw-bold font-NotoSerif">沙拉系列</a>
+          <a id="Salad" href="4-1_menu-salad.html?param1=value2" class="link-primary fs-5 fw-bold font-NotoSerif">沙拉系列</a>
         </li>
         <li>
-          <a id="Burger" href="4-2_menu-burger.html" class="link-primary fs-5 fw-bold font-NotoSerif">漢堡系列</a>
+          <a id="Burger" href="4-2_menu-burger.html?param1=value2" class="link-primary fs-5 fw-bold font-NotoSerif">漢堡系列</a>
         </li>
         <li>
-          <a id="Sandwich"  href="4-3_menu-sandwich.html" class="link-primary fs-5 fw-bold font-NotoSerif">三明治系列</a>
+          <a id="Sandwich"  href="4-3_menu-sandwich.html?param1=value2" class="link-primary fs-5 fw-bold font-NotoSerif">三明治系列</a>
         </li>
         <li>
-          <a id="Brunch"  href="4-4_menu-brunch.html" class="link-primary fs-5 fw-bold font-NotoSerif">早午餐系列</a>
+          <a id="Brunch"  href="4-4_menu-brunch.html?param1=value2" class="link-primary fs-5 fw-bold font-NotoSerif">早午餐系列</a>
         </li>
         <li>
-          <a id="Pasta"  href="4-5_menu-pasta.html" class="link-primary fs-5 fw-bold font-NotoSerif">義大利麵系列</a>
+          <a id="Pasta"  href="4-5_menu-pasta.html?param1=value2" class="link-primary fs-5 fw-bold font-NotoSerif">義大利麵系列</a>
         </li>
         <li>
-          <a id="Drink"  href="4-6_menu-drink.html" class="link-primary fs-5 fw-bold font-NotoSerif">飲品系列</a>
+          <a id="Drink"  href="4-6_menu-drink.html?param1=value2" class="link-primary fs-5 fw-bold font-NotoSerif">飲品系列</a>
         </li>
       </ul>
     </div>
@@ -233,7 +233,7 @@
     </div>
   </div>
 </footer>
-  <script src="../pages/4_menu.js"></script>
+  <script src="../pages/4_menu.js"  ></script>
   <script>
     renderMenu(menuData.Salad);
   </script>
