修改網址參數

--- a/pages/4-1_menu-salad.html
+++ b/pages/4-1_menu-salad.html
@@ -62,7 +62,7 @@
 <%- include('./layout/footer'); -%>
   <script src="../pages/4_menu.js"  ></script>
   <script>
-    renderMenu(menuData.Salad);
+    renderMenu(menuData[param1Value]);
   </script>
  <script type="module" src="../main.js"></script>
 </body>
