--- a/4_menu.html
+++ b/4_menu.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MENU</title>
-    <script type="module" crossorigin src="/Luminous-Brunch/assets/main-cab2a921.js"></script>
+    <script type="module" crossorigin src="/Luminous-Brunch/assets/main-e6f5aebd.js"></script>
     <link rel="stylesheet" href="/Luminous-Brunch/assets/main-bebc6330.css">
   </head>
   <body>
@@ -44,32 +44,32 @@
         >
         <ul class="dropdownMenu position_absolute_lg list-unstyled ps-0">
           <li>
-            <a class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500" href="4-1_menu-salad.html"
+            <a class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500" href="4-1_menu-salad.html?menu=Salad"
               >沙拉系列</a
             >
           </li>
           <li>
-            <a  class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500" href="4-2_menu-burger.html"
+            <a  class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500" href="4-1_menu-salad.html?menu=Burger"
               >漢堡系列</a
             >
           </li>
           <li>
-            <a class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500" href="4-3_menu-sandwich.html"
+            <a class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500" href="4-1_menu-salad.html?menu=Sandwich"
               >三明治系列</a
             >
           </li>
           <li>
-            <a class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500" href="4-4_menu-brunch.html"
+            <a class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500" href="4-1_menu-salad.html?menu=Brunch"
               >早午餐拼盤</a
             >
           </li>
           <li>
-            <a class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500" href="4-5_menu-pasta.html"
+            <a class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500" href="4-1_menu-salad.html?menu=Pasta"
               >義大利麵系列</a
             >
           </li>
           <li>
-            <a class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500" href="4-6_menu-drink.html"
+            <a class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500" href="4-1_menu-salad.html?menu=Drink"
               >飲品</a
             >
           </li>
@@ -101,29 +101,26 @@
     </div>
     <!-- 選單 -->
     <div class="d-none d-lg-block">
-      
-
-
-  <div class="container ">
+        <div class="container ">
     <div class="py-6">
       <ul id="menuList" class=" d-flex justify-content-around">
         <li>
-          <a id="Salad" href="4-1_menu-salad.html?param1=value2" class="link-primary fs-5 fw-bold font-NotoSerif">沙拉系列</a>
+          <a id="Salad" href="4-1_menu-salad.html?menu=Salad" class="link-primary fs-5 fw-bold font-NotoSerif">沙拉系列</a>
         </li>
         <li>
-          <a id="Burger" href="4-2_menu-burger.html?param1=value2" class="link-primary fs-5 fw-bold font-NotoSerif">漢堡系列</a>
+          <a id="Burger" href="4-1_menu-salad.html?menu=Burger" class="link-primary fs-5 fw-bold font-NotoSerif">漢堡系列</a>
         </li>
         <li>
-          <a id="Sandwich"  href="4-3_menu-sandwich.html?param1=value2" class="link-primary fs-5 fw-bold font-NotoSerif">三明治系列</a>
+          <a id="Sandwich"  href="4-1_menu-salad.html?menu=Sandwich" class="link-primary fs-5 fw-bold font-NotoSerif">三明治系列</a>
         </li>
         <li>
-          <a id="Brunch"  href="4-4_menu-brunch.html?param1=value2" class="link-primary fs-5 fw-bold font-NotoSerif">早午餐系列</a>
+          <a id="Brunch"  href="4-1_menu-salad.html?menu=Brunch" class="link-primary fs-5 fw-bold font-NotoSerif">早午餐系列</a>
         </li>
         <li>
-          <a id="Pasta"  href="4-5_menu-pasta.html?param1=value2" class="link-primary fs-5 fw-bold font-NotoSerif">義大利麵系列</a>
+          <a id="Pasta"  href="4-1_menu-salad.html?menu=Pasta" class="link-primary fs-5 fw-bold font-NotoSerif">義大利麵系列</a>
         </li>
         <li>
-          <a id="Drink"  href="4-6_menu-drink.html?param1=value2" class="link-primary fs-5 fw-bold font-NotoSerif">飲品系列</a>
+          <a id="Drink"  href="4-1_menu-salad.html?menu=Drink" class="link-primary fs-5 fw-bold font-NotoSerif">飲品系列</a>
         </li>
       </ul>
     </div>
@@ -136,7 +133,7 @@
     <div class="container d-none d-lg-block">
       <div class="row justify-content-end align-items-center ">
         <div class="col-lg-5">
-          <a href="4-1_menu-salad.html" class="">
+          <a href="4-1_menu-salad.html?menu=Salad?menu=Salad" class="">
             <div class="text-center py-6">
               <h2 class="fw-bold font-NotoSerif mb-6">| 沙 拉 系 列 |</h2>
               <p class="fs-5">隨著人們對健康飲食的重視,沙拉系列在現代社會中變得愈發受歡迎。越來越多的餐廳和快餐連鎖店提供多樣化的沙拉選擇</p>
@@ -149,7 +146,7 @@
     <div class="container d-lg-none ">
       <div class="bg-opcity">
         <div class="col-lg-5">
-          <a href="4-1_menu-salad.html" class="">
+          <a href="4-1_menu-salad.html?menu=Salad?menu=Salad" class="">
           <div class="text-center py-6">
             <h2 class="fs-4 fw-bold font-NotoSerif mb-6">| 沙 拉 系 列 |</h2>
             <p class="fs-6">隨著人們對健康飲食的重視,沙拉系列在現代社會中變得愈發受歡迎。越來越多的餐廳和快餐連鎖店提供多樣化的沙拉選擇</p>
@@ -168,7 +165,7 @@
     <div class="container d-none d-lg-block">
       <div class="row align-items-center justify-content-center">
         <div class="col-lg-8">
-          <a href="4-1_menu-salad.html" class="">
+          <a href="4-1_menu-salad.html?menu=Burger" class="">
           <div class="text-center py-6">
             <h2 class="fw-bold font-NotoSerif mb-6">| 漢 堡 系 列 |</h2>
             <p class="fs-5">漢堡作為經典的早午餐品項之一，各種變化和創新也不斷出現,例如素食漢堡、特色漢堡、健康漢堡等,我們能為您提供最適合您喜好的餐點</p>
@@ -183,7 +180,7 @@
       <div class="container d-lg-none ">
         <div class="bg-opcity">
           <div class="col-lg-5">
-            <a href="4-1_menu-salad.html" class="">
+            <a href="4-1_menu-salad.html?menu=Burger" class="">
             <div class="text-center py-6">
               <h2 class="fs-4 fw-bold font-NotoSerif mb-6">| 漢 堡 系 列 |</h2>
               <p class="fs-6">漢堡作為經典的早午餐品項之一，各種變化和創新也不斷出現,例如素食漢堡、特色漢堡、健康漢堡等,我們能為您提供最適合您喜好的餐點</p>
@@ -206,7 +203,7 @@
     <div class="container d-none d-lg-block">
       <div class="row align-items-center justify-content-end ">
         <div class="col-lg-5 ">
-          <a href="4-1_menu-salad.html" class="h-100">
+          <a href="4-1_menu-salad.html?menu=Brunch" class="h-100">
           <div class="text-center  py-6">
             <h2 class="fw-bold font-NotoSerif mb-6">| 早 午 餐 系 列 |</h2>
             <p class="fs-5">早午餐拼盤可能包含鬆餅、煎蛋、香腸、培根、吐司、鮭魚、沙拉、奶酪、甜點、水果、果汁等,搭配不同的醬料和飲品,讓用餐者可以根據自己的喜好進行選擇</p>
@@ -220,7 +217,7 @@
     <div class="container d-lg-none ">
       <div class="bg-opcity">
         <div class="col-lg-5">
-          <a href="4-1_menu-salad.html" class="">
+          <a href="4-1_menu-salad.html?menu=Brunch" class="">
           <div class="text-center py-6">
             <h2 class="fs-4 fw-bold font-NotoSerif mb-6">| 早 午 餐 系 列 |</h2>
             <p class="fs-6">早午餐拼盤可能包含鬆餅、煎蛋、香腸、培根、吐司、鮭魚、沙拉、奶酪、甜點、水果、果汁等,搭配不同的醬料和飲品,讓用餐者可以根據自己的喜好進行選擇</p>
@@ -237,7 +234,7 @@
     <div class="container d-none d-lg-block">
       <div class="row justify-content-center align-items-center ">
         <div class="col-lg-8">
-          <a href="4-1_menu-salad.html" class="">
+          <a href="4-1_menu-salad.html?menu=Sandwich" class="">
             <div class="text-center  py-6">
               <h2 class="fw-bold font-NotoSerif mb-6">| 三 明 治 系 列 |</h2>
               <p class="fs-5">美味、快速製作和多樣化的餐點搭配選擇。隨著飲食趨勢向更健康和多樣化發展,素食和輕食的三明治也受到了青睞，我們提供了熱壓吐司、法式吐司與各種風味麵包，讓三明治料理更加有趣，也提供了更新穎的口味</p>
@@ -251,7 +248,7 @@
       <div class="container d-lg-none ">
         <div class="bg-opcity">
           <div class="col-lg-5">
-            <a href="4-1_menu-salad.html" class="">
+            <a href="4-1_menu-salad.html?menu=Sandwich" class="">
             <div class="text-center py-6">
               <h2 class="fs-4 fw-bold font-NotoSerif mb-6">| 三 明 治 系 列 |</h2>
               <p class="fs-6">美味、快速製作和多樣化的餐點搭配選擇。隨著飲食趨勢向更健康和多樣化發展,素食和輕食的三明治也受到了青睞，我們提供了熱壓吐司、法式吐司與各種風味麵包，讓三明治料理更加有趣，也提供了更新穎的口味</p>
@@ -273,7 +270,7 @@
     <div class="container d-none d-lg-block">
       <div class="row justify-content-end align-items-center ">
         <div class="col-lg-5">
-          <a href="4-1_menu-salad.html" class="">
+          <a href="4-1_menu-salad.html?menu=Pasta" class="">
             <div class="text-center py-6">
               <h2 class="fw-bold font-NotoSerif mb-6">| 義 大 利 麵 系 列 |</h2>
               <p class="fs-5">常見的義大利麵有直麵、通心粉、斜管麵、螺旋麵等,搭配不同醬料如碎肉醬、青醬、海鮮醬等,形成豐富多樣的義大利麵料理</p>
@@ -286,7 +283,7 @@
     <div class="container d-lg-none ">
       <div class="bg-opcity">
         <div class="col-lg-5">
-          <a href="4-1_menu-salad.html" class="">
+          <a href="4-1_menu-salad.html?menu=Pasta" class="">
           <div class="text-center py-6">
             <h2 class="fs-4 fw-bold font-NotoSerif mb-6">| 義 大 利 麵 系 列 |</h2>
             <p class="fs-6">常見的義大利麵有直麵、通心粉、斜管麵、螺旋麵等,搭配不同醬料如碎肉醬、青醬、海鮮醬等,形成豐富多樣的義大利麵料理</p>
@@ -305,7 +302,7 @@
         
         <div class="row align-items-center justify-content-center ">
           <div class="col-lg-8">
-            <a href="4-1_menu-salad.html" class="">
+            <a href="4-1_menu-salad.html?menu=Drink" class="">
             <div class="text-center py-6">
               <h2 class="fw-bold font-NotoSerif mb-6">| 飲 品 系 列 |</h2>
               <p class="fs-5">漢我們提供新鮮的現打果汁，多種水果富含不同的營養，幫助補充日常所需的維生素，讓您從早晨就補滿一天所需的元氣。也提供經典的茶飲與咖啡，滿足不同需求的您</p>
@@ -320,7 +317,7 @@
         <div class="container d-lg-none ">
           <div class="bg-opcity">
             <div class="col-lg-5">
-              <a href="4-1_menu-salad.html" class="">
+              <a href="4-1_menu-salad.html?menu=Drink" class="">
               <div class="text-center py-6">
                 <h2 class="fs-4 fw-bold font-NotoSerif mb-6">| 飲 品 系 列 |</h2>
                 <p class="fs-6">漢我們提供新鮮的現打果汁，多種水果富含不同的營養，幫助補充日常所需的維生素，讓您從早晨就補滿一天所需的元氣。也提供經典的茶飲與咖啡，滿足不同需求的您</p>
