--- a/_login.html
+++ b/_login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-  <script type="module" crossorigin src="/Luminous-Brunch/assets/main-cab2a921.js"></script>
+  <script type="module" crossorigin src="/Luminous-Brunch/assets/main-e6f5aebd.js"></script>
   <link rel="stylesheet" href="/Luminous-Brunch/assets/main-bebc6330.css">
 </head>
 <body>
@@ -44,32 +44,32 @@
         >
         <ul class="dropdownMenu position_absolute_lg list-unstyled ps-0">
           <li>
-            <a class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500" href="4-1_menu-salad.html"
+            <a class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500" href="4-1_menu-salad.html?menu=Salad"
               >沙拉系列</a
             >
           </li>
           <li>
-            <a  class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500" href="4-2_menu-burger.html"
+            <a  class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500" href="4-1_menu-salad.html?menu=Burger"
               >漢堡系列</a
             >
           </li>
           <li>
-            <a class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500" href="4-3_menu-sandwich.html"
+            <a class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500" href="4-1_menu-salad.html?menu=Sandwich"
               >三明治系列</a
             >
           </li>
           <li>
-            <a class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500" href="4-4_menu-brunch.html"
+            <a class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500" href="4-1_menu-salad.html?menu=Brunch"
               >早午餐拼盤</a
             >
           </li>
           <li>
-            <a class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500" href="4-5_menu-pasta.html"
+            <a class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500" href="4-1_menu-salad.html?menu=Pasta"
               >義大利麵系列</a
             >
           </li>
           <li>
-            <a class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500" href="4-6_menu-drink.html"
+            <a class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500" href="4-1_menu-salad.html?menu=Drink"
               >飲品</a
             >
           </li>
