--- a/4-1_menu-salad.html
+++ b/4-1_menu-salad.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Salad</title>
-  <script type="module" crossorigin src="/Luminous-Brunch/assets/main-cab2a921.js"></script>
+  <script type="module" crossorigin src="/Luminous-Brunch/assets/main-e6f5aebd.js"></script>
   <link rel="stylesheet" href="/Luminous-Brunch/assets/main-bebc6330.css">
 </head>
 <body>
@@ -43,32 +43,32 @@
         >
         <ul class="dropdownMenu position_absolute_lg list-unstyled ps-0">
           <li>
-            <a class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500" href="4-1_menu-salad.html"
+            <a class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500" href="4-1_menu-salad.html?menu=Salad"
               >沙拉系列</a
             >
           </li>
           <li>
-            <a  class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500" href="4-2_menu-burger.html"
+            <a  class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500" href="4-1_menu-salad.html?menu=Burger"
               >漢堡系列</a
             >
           </li>
           <li>
-            <a class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500" href="4-3_menu-sandwich.html"
+            <a class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500" href="4-1_menu-salad.html?menu=Sandwich"
               >三明治系列</a
             >
           </li>
           <li>
-            <a class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500" href="4-4_menu-brunch.html"
+            <a class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500" href="4-1_menu-salad.html?menu=Brunch"
               >早午餐拼盤</a
             >
           </li>
           <li>
-            <a class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500" href="4-5_menu-pasta.html"
+            <a class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500" href="4-1_menu-salad.html?menu=Pasta"
               >義大利麵系列</a
             >
           </li>
           <li>
-            <a class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500" href="4-6_menu-drink.html"
+            <a class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500" href="4-1_menu-salad.html?menu=Drink"
               >飲品</a
             >
           </li>
@@ -98,29 +98,26 @@
     </div>
   </div>
   <!-- 菜單品項選單 -->
-  
-
-
-  <div class="container ">
+    <div class="container ">
     <div class="py-6">
       <ul id="menuList" class=" d-flex justify-content-around">
         <li>
-          <a id="Salad" href="4-1_menu-salad.html?param1=value2" class="link-primary fs-5 fw-bold font-NotoSerif">沙拉系列</a>
+          <a id="Salad" href="4-1_menu-salad.html?menu=Salad" class="link-primary fs-5 fw-bold font-NotoSerif">沙拉系列</a>
         </li>
         <li>
-          <a id="Burger" href="4-2_menu-burger.html?param1=value2" class="link-primary fs-5 fw-bold font-NotoSerif">漢堡系列</a>
+          <a id="Burger" href="4-1_menu-salad.html?menu=Burger" class="link-primary fs-5 fw-bold font-NotoSerif">漢堡系列</a>
         </li>
         <li>
-          <a id="Sandwich"  href="4-3_menu-sandwich.html?param1=value2" class="link-primary fs-5 fw-bold font-NotoSerif">三明治系列</a>
+          <a id="Sandwich"  href="4-1_menu-salad.html?menu=Sandwich" class="link-primary fs-5 fw-bold font-NotoSerif">三明治系列</a>
         </li>
         <li>
-          <a id="Brunch"  href="4-4_menu-brunch.html?param1=value2" class="link-primary fs-5 fw-bold font-NotoSerif">早午餐系列</a>
+          <a id="Brunch"  href="4-1_menu-salad.html?menu=Brunch" class="link-primary fs-5 fw-bold font-NotoSerif">早午餐系列</a>
         </li>
         <li>
-          <a id="Pasta"  href="4-5_menu-pasta.html?param1=value2" class="link-primary fs-5 fw-bold font-NotoSerif">義大利麵系列</a>
+          <a id="Pasta"  href="4-1_menu-salad.html?menu=Pasta" class="link-primary fs-5 fw-bold font-NotoSerif">義大利麵系列</a>
         </li>
         <li>
-          <a id="Drink"  href="4-6_menu-drink.html?param1=value2" class="link-primary fs-5 fw-bold font-NotoSerif">飲品系列</a>
+          <a id="Drink"  href="4-1_menu-salad.html?menu=Drink" class="link-primary fs-5 fw-bold font-NotoSerif">飲品系列</a>
         </li>
       </ul>
     </div>
@@ -235,7 +232,7 @@
 </footer>
   <script src="../pages/4_menu.js"  ></script>
   <script>
-    renderMenu(menuData.Salad);
+    renderMenu(menuData[param1Value]);
   </script>
  
 </body>
