--- a/pages/5-1-1_booking.html
+++ b/pages/5-1-1_booking.html
@@ -17,13 +17,7 @@
             <div class="line"></div>
             <div class="step active" id="step3"><span>訂位完成</span></div>
           </div>
-          <div class="confirm-text" id="confirm-text-id"></div>
-          <div class="d-flex justify-content-evenly mt-5" id="">
-            <button type="button" class="btn btn-primary" id="">取消訂位</button
-            ><a class="btn btn-primary" href="#index.hmtl" role="button"
-              >回首頁</a
-            >
-          </div>
+          <div class="form-content-confirm"></div>
         </div>
       </div>
       <%- include('./layout/footer'); -%>
