調整監聽範圍

--- a/pages/_login.html
+++ b/pages/_login.html
@@ -52,7 +52,8 @@
           </div>
         </div>
         <%- include('./layout/footer'); -%>
-    </main>
+    </main>   
+    <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
     <script type="module" src="../main.js"></script>
 </body>
 </html>
