休息一下再試一次

--- a/pages/4_menu.html
+++ b/pages/4_menu.html
@@ -26,7 +26,7 @@
     <div class="container d-none d-lg-block">
       <div class="row justify-content-end align-items-center ">
         <div class="col-lg-5">
-          <a href="4-1_menu-salad.html?menu=Salad?menu=Salad" class="">
+          <a href="4-1_menu-salad.html?menu=Salad" class="">
             <div class="text-center py-6">
               <h2 class="fw-bold font-NotoSerif mb-6">| 沙 拉 系 列 |</h2>
               <p class="fs-5">隨著人們對健康飲食的重視,沙拉系列在現代社會中變得愈發受歡迎。越來越多的餐廳和快餐連鎖店提供多樣化的沙拉選擇</p>
@@ -39,7 +39,7 @@
     <div class="container d-lg-none ">
       <div class="bg-opcity">
         <div class="col-lg-5">
-          <a href="4-1_menu-salad.html?menu=Salad?menu=Salad" class="">
+          <a href="4-1_menu-salad.html?menu=Salad" class="">
           <div class="text-center py-6">
             <h2 class="fs-4 fw-bold font-NotoSerif mb-6">| 沙 拉 系 列 |</h2>
             <p class="fs-6">隨著人們對健康飲食的重視,沙拉系列在現代社會中變得愈發受歡迎。越來越多的餐廳和快餐連鎖店提供多樣化的沙拉選擇</p>
